--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -4,6 +4,7 @@ $unknown: #757C64;
 $textHover: #7ea17d;
 $button: #82ae95;
 $backgroundColor: #D7F2BA;
+$white: hsl(0,0,100%);
 
 // Font-size
 $font-sm: 0.875rem;
